--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.23.0",
     "eventsource-polyfill": "^0.9.6",
     "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
     "webpack": "2.1.0-beta.21",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
