--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
