--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.0.0"
