--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "body-parser": "^1.17.1",
+    "classnames": "^2.2.5",
     "express": "^4.15.2",
+    "express-validator": "^3.1.2",
     "lodash": "^4.17.4",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
